vpc.tf
resource "aws_vpc" "main" {

  cidr_block = "10.0.0.0/16"
  tags       = var.common_tags
}



resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = var.common_tags
}


resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = var.common_tags



}

resource "aws_route_table_association" "public" {
  count          = length(var.availability_zones)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
